@@ -17,9 +17,9 @@ AC_SUBST(PACKAGE)
 #
 MAJOR_VERSION=1
 MINOR_VERSION=0
-MICRO_VERSION=0
-INTERFACE_AGE=0
-BINARY_AGE=0
+MICRO_VERSION=1
+INTERFACE_AGE=1
+BINARY_AGE=1
 VERSION="${MAJOR_VERSION}.${MINOR_VERSION}.${MICRO_VERSION}"
 AC_SUBST(MAJOR_VERSION)
 AC_SUBST(MINOR_VERSION)
